--- a/style/main.css
+++ b/style/main.css
@@ -302,3 +302,9 @@ ul {
   align-items: center;
   flex-direction: column;
 }
+.fnav__copyright{
+  text-align: center;
+  color: #fff;
+  margin-top: 10px;
+  padding-bottom: 10px;
+}
