--- a/style/main.css
+++ b/style/main.css
@@ -82,8 +82,19 @@ ul {
       width: 1536px;
     }
   }
-
   /* NAV */
+/* .check-btn{
+  max-width: 30px;
+  cursor: pointer;
+  display: none;
+}
+#check{
+  display: none;
+} */
+.nav__btn{
+  display: none;
+  padding: 6px 12px;
+}
 .nav{
     display: flex;
     align-items: center;
@@ -307,4 +318,73 @@ ul {
   color: #fff;
   margin-top: 10px;
   padding-bottom: 10px;
+}
+
+@media (max-width: 768px){
+  .nav__title{
+    display: none;
+  }
+  .intro__title{
+    font-size: 45px;
+  }
+  .intro__text{
+    font-size: 35px;
+    line-height: normal;
+  }
+  .intro__span{
+    font-size: 30px;
+    line-height: normal;
+  }
+  .features-details{
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .info__img{
+    display: none;
+  }
+  .info__text{
+    font-size: 30px;
+  }
+  .sponsors__title{
+    font-size: 35px;
+    margin-top: 40px;
+  }
+  .sponsors-box{
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .sponsors__subtitle{
+    font-size: 30px;
+  }
+  .sponsors__btn{
+    padding: 6px 12px;
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+  .footers{
+    flex-wrap: wrap;
+    align-items: center;
+  }
+}
+@media (max-width: 584px){
+  .nav__btn{
+    display: block;
+  }
+  .nav-list{
+    display: none;
+  }
+  /* .check-btn{
+    position: relative;
+    display: block;
+  }
+  .nav-list{
+    flex-direction: column;
+    background-color: #4442EA;
+    color: #fff;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  } */
 }
